--- a/styles/typography.css
+++ b/styles/typography.css
@@ -7,13 +7,13 @@
    item (pip install fonttools brotli; flavor='woff2'). Rendering is identical. */
 @font-face {
   font-family: 'Jomolhari';
-  src: url('/dorje-sempa/fonts/Jomolhari-Regular.ttf?v=964f61d9') format('truetype');
+  src: url('/dorje-sempa/fonts/Jomolhari-Regular.ttf?v=59a52746') format('truetype');
   font-weight: 400;
   font-display: swap;
 }
 @font-face {
   font-family: 'Noto Serif Tibetan';
-  src: url('/dorje-sempa/fonts/NotoSerifTibetan-VF.ttf?v=964f61d9') format('truetype');
+  src: url('/dorje-sempa/fonts/NotoSerifTibetan-VF.ttf?v=59a52746') format('truetype');
   font-weight: 100 900;
   font-display: swap;
 }
